<resources>
    <string name="app_name">Заметки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Заметки</string>
    <string name="nav_header_subtitle">Создавайте и не забывайте!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Все заметки</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_export">Экспортировать</string>
    <string name="menu_import">Импортировать</string>
    <string name="menu_about">О приложении</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>