<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/baseline_web_stories_20"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/baseline_upload_20"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/baseline_download_20"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about" />
    </group>
</menu>